Replacing the standard with a custom controller

--- a/classes/HomePageController.cls
+++ b/classes/HomePageController.cls
@@ -1,7 +1,20 @@
 public with sharing class HomePageController {
+    public List<Contact> contacts {get;set;}
+    public Contact contact {get;set;}
+    public String contactId {get;set;}    
     
-    public HomePageController(ApexPages.StandardController stdController) {        
+    public HomePageController() { 
+        contactId = ApexPages.currentPage().getParameters().get('id');        
     }
+
+    public PageReference getContact() {  
+        contact = [
+            SELECT Id, Name
+            FROM Contact 
+            WHERE Id =: contactId            
+        ][0];                
+        return null;
+    }    
     
     public PageReference logOut() {         
         PageReference loginPageReference = new PageReference('/apex/LoginPage');
