--- a/classes/RegistrationPageController.cls
+++ b/classes/RegistrationPageController.cls
@@ -7,16 +7,8 @@ public without sharing class RegistrationPageController {
         contact = new Contact();
     }  
 
-    public PageReference save() {        
-        List<Contact> contacts = [
-            SELECT Id,                     
-                    Username__c                    
-            FROM Contact 
-            WHERE Username__c =: contact.Username__c
-            LIMIT 1
-        ];
-        System.debug(contacts);
-
+    public PageReference save() {
+        List<Contact> contacts = ContactManager.getByUsername(contact.Username__c);
         if (String.isBlank(contact.Lastname) || String.isBlank(contact.Username__c) || String.isBlank(contact.Password__c)) {
 			ApexPages.Message msg = new ApexPages.Message(ApexPages.Severity.ERROR, 'Please fill in the required fields marked with *.');
 			ApexPages.addMessage(msg);
@@ -25,10 +17,8 @@ public without sharing class RegistrationPageController {
             ApexPages.Message msg = new ApexPages.Message(ApexPages.Severity.ERROR, 'A contact with same username already exists.');
 			ApexPages.addMessage(msg);
 			return null;
-        } else {            
-            System.debug(contact);
-            insert contact;
-            ApexPages.Message msg = new ApexPages.Message(ApexPages.Severity.INFO, 'Contact created');                
+        } else {
+            insert contact;                           
             return Page.LoginPage;			
         }
     }
