--- a/classes/OrderManager.cls
+++ b/classes/OrderManager.cls
@@ -5,7 +5,8 @@ public without sharing class OrderManager {
             SELECT Name,
                     Master__c,
                     Price__c,
-                    End_Date__c
+                    End_Date__c,
+                    Priority__c
             FROM Order__c
             ORDER BY Name
             LIMIT 50
@@ -13,15 +14,33 @@ public without sharing class OrderManager {
         return orders;        
     }
     
-    public static List<Order__c> sortByField (List<Order__c> orders, String sortField1, String sortField2) {
-        if(orders == null || orders.isEmpty() || String.isBlank(sortField1) || String.isBlank(sortField2)) {
+    public static List<Order__c> filterByParam (String sortField1, String sortField2) {
+        if(String.isBlank(sortField1) || String.isBlank(sortField2)) {
             return new List<Order__c>();
-        } else { 
-            String query = 'SELECT Name, Master__c, Price__c, End_Date__c ' +
+        } else if (sortField1 != 'None' && sortField2 == 'None') { 
+            String query = 'SELECT Name, Master__c, Price__c, End_Date__c, Priority__c ' +
                             + 'FROM Order__c ' +            
-                            + 'ORDER BY ' + sortField1 + ', ' + sortField2 + 
+                            + 'WHERE Price__c ' + sortField1 +
                             + ' LIMIT 50';     
             List<Order__c> sortOrders = Database.query(query);
+            return sortOrders;
+        } else if (sortField1 != 'None' && sortField2 != 'None') { 
+            String query = 'SELECT Name, Master__c, Price__c, End_Date__c, Priority__c ' +
+                            + 'FROM Order__c ' +            
+                            + 'WHERE Price__c ' + sortField1 +
+                            + 'AND Priority__c =:  sortField2' +
+                            + ' LIMIT 50';     
+            List<Order__c> sortOrders = Database.query(query);
+            return sortOrders;
+        } else if (sortField1 == 'None' && sortField2 != 'None') { 
+            String query = 'SELECT Name, Master__c, Price__c, End_Date__c, Priority__c ' +
+                            + 'FROM Order__c ' +            
+                            + 'WHERE Priority__c =:  sortField2' +
+                            + ' LIMIT 50';     
+            List<Order__c> sortOrders = Database.query(query);
+            return sortOrders;
+        }else  { 
+            List<Order__c> sortOrders = getOrderSortByName();
             return sortOrders;
         }
     }
